--- a/packages/terra-form-checkbox/themes/orion-fusion-theme/root-theme.scss
+++ b/packages/terra-form-checkbox/themes/orion-fusion-theme/root-theme.scss
@@ -1,4 +1,4 @@
-:global {
+:global :root {
   //Checkbox
   --terra-form-checkbox-font-color: rgba(17, 22, 25, 0.85);
   --terra-form-checkbox-container-margin-bottom: 0;
