--- a/packages/terra-form-radio/themes/orion-fusion-theme/root-theme.scss
+++ b/packages/terra-form-radio/themes/orion-fusion-theme/root-theme.scss
@@ -1,4 +1,4 @@
-:global {
+:global :root {
   //Radio
   --terra-form-radio-font-color: rgba(17, 22, 25, 0.85);
   --terra-form-radio-container-margin-bottom: 0;
